fixed boat on smaller devices

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -315,7 +315,18 @@ nav{
   
   animation: sailing 45s 4s both linear infinite alternate;
 }
-
+@media only screen and (max-width: 600px) {
+  .boat {
+    
+  
+    
+    top: 106% !important;
+    
+    
+    
+  }
+  
+}
 #hull {
   
   border: solid;
